--- a/task/pom.xml
+++ b/task/pom.xml
@@ -84,7 +84,16 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.12.2</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-core -->
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<version>6.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-file</artifactId>
+		</dependency>
 
 	</dependencies>
 
